WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50575
[chromium] fix an assert hit in DRT
https://bugs.webkit.org/show_bug.cgi?id=50575
Summary
[chromium] fix an assert hit in DRT
Tony Chang
Reported
2010-12-06 11:20:41 PST
[chromium] fix an assert hit in DRT
Attachments
Patch
(1.48 KB, patch)
2010-12-06 11:22 PST
,
Tony Chang
ojan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2010-12-06 11:22:16 PST
Created
attachment 75714
[details]
Patch
Tony Chang
Comment 2
2010-12-06 12:23:46 PST
one more debug fix before trying to switch to drt again
Ojan Vafai
Comment 3
2010-12-06 12:36:00 PST
Comment on
attachment 75714
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=75714&action=review
> WebKitTools/DumpRenderTree/chromium/TestWebWorker.h:51 > + relaxAdoptionRequirement();
Can you just add a comment explaining this?
Tony Chang
Comment 4
2010-12-06 12:40:02 PST
Committed
r73389
: <
http://trac.webkit.org/changeset/73389
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug