2010-12-06  Tony Chang  <tony@chromium.org>

Reviewed by Ojan Vafai.

        [chromium] fix an assert hit in DRT
        https://bugs.webkit.org/show_bug.cgi?id=50575

        This class uses WTF's RefPtr, but expects chrome's base::RefPtr
        semantics.

        Otherwise, we hit ASSERTION FAILED: !m_adoptionIsRequired
        (third_party/WebKit/JavaScriptCore/wtf/RefCounted.h:37 void
        WTF::RefCountedBase::ref()).

        * DumpRenderTree/chromium/TestWebWorker.h:
        (TestWebWorker::TestWebWorker):

Canonical link: https://commits.webkit.org/63808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73389 268f45cc-cd09-0410-ab3c-d52691b4dbfc